--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div id="end"><input type="datetime-local"></div>
         </div>
         <div class="time">
-            Add duration: <span id="duration"><input></input></span>
+            Add duration: <span id="duration"><input></span>
         </div>
         <div class="priority">
             <select id="priority-select">
