Update "inputHelper" to format datetime with time zone into local Add "updateTask" function in storage class Add "onTaskActionsRequest" event listener in "Board" class

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
         <div class="priority">
             <select id="priority-select">
                 <option value="low">Low</option>
-                <option value="medium" selected>Medium</option>
+                <option value="mid" selected>Medium</option>
                 <option value="high">High</option>
             </select>
         </div>
         <div class="type">
             <select id="type-select">
-                <option value="personal">Feature</option>
+                <option value="feature">Feature</option>
                 <option value="work" selected>Bugfix</option>
-                <option value="urgent">Improvement</option>
+                <option value="improvement">Improvement</option>
             </select>
         </div>
         <div class="person">
