Add "drag" and "drop" event listeners

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="title">
                 <span class="title__text">Blocked</span>
                 <span class="counter"></span>
+                <div class="title__actions">
+                    <button class="move-left">←</button>
+                    <button class="move-right">→</button>
+                </div>
             </div>
             <div class="task">
                 Example <span><button><img src="media/edit-black-pencil-28048.svg"></button></span>
@@ -33,6 +37,10 @@
             <div class="title">
                 <span class="title__text">To do</span>
                 <span class="counter"></span>
+                <div class="title__actions">
+                    <button class="move-left">←</button>
+                    <button class="move-right">→</button>
+                </div>                
             </div>
             <div class="add">
                 <button>+</button>
@@ -42,6 +50,10 @@
             <div class="title">
                 <span class="title__text">In progress</span>
                 <span class="counter"></span>
+                <div class="title__actions">
+                    <button class="move-left">←</button>
+                    <button class="move-right">→</button>
+                </div>                
             </div>
             <div class="add">
                 <button>+</button>
@@ -51,6 +63,10 @@
             <div class="title">
                 <span class="title__text">In review</span>
                 <span class="counter"></span>
+                <div class="title__actions">
+                    <button class="move-left">←</button>
+                    <button class="move-right">→</button>
+                </div>                
             </div>
             <div class="add">
                 <button>+</button>
@@ -60,6 +76,10 @@
             <div class="title">
               <span class="title__text">Done</span>
               <span class="counter"></span>
+                <div class="title__actions">
+                    <button class="move-left">←</button>
+                    <button class="move-right">→</button>
+                </div>              
             </div>
             <div class="add">
                 <button>+</button>
