Update "inputHelper" "getNewTaskData" and add "getUpdatedTaskData" Add "ValidateData" for frontend validation Update "taskController" update and create methods

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="type">
             <select id="type-select">
                 <option value="feature">Feature</option>
-                <option value="work" selected>Bugfix</option>
+                <option value="bugfix" selected>Bugfix</option>
                 <option value="improvement">Improvement</option>
             </select>
         </div>
