--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>task management</title>
+    <title>Task management</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="media/to-do-list-13178.svg">
 </head>
