arrow and toast fixes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <span class="title__text">Blocked</span>
                 <span class="counter"></span>
                 <div class="title__actions">
-                    <button class="move-left">←</button>
-                    <button class="move-right">→</button>
+                    <button class="move-left"><img src="media/left-arrow.svg"></button>
+                    <button class="move-right"><img src="media/right-arrow-7359.svg"></button>
                 </div>
             </div>
             <div class="task">
@@ -39,8 +39,8 @@
                 <span class="title__text">To do</span>
                 <span class="counter"></span>
                 <div class="title__actions">
-                    <button class="move-left">←</button>
-                    <button class="move-right">→</button>
+                    <button class="move-left"><img src="media/left-arrow.svg"></button>
+                    <button class="move-right"><img src="media/right-arrow-7359.svg"></button>
                 </div>                
             </div>
             <div class="task" id="deadline">
@@ -61,8 +61,8 @@
                 <span class="title__text">In progress</span>
                 <span class="counter"></span>
                 <div class="title__actions">
-                    <button class="move-left">←</button>
-                    <button class="move-right">→</button>
+                    <button class="move-left"><img src="media/left-arrow.svg"></button>
+                    <button class="move-right"><img src="media/right-arrow-7359.svg"></button>
                 </div>                
             </div>
             <div class="add">
@@ -74,8 +74,8 @@
                 <span class="title__text">In review</span>
                 <span class="counter"></span>
                 <div class="title__actions">
-                    <button class="move-left">←</button>
-                    <button class="move-right">→</button>
+                    <button class="move-left"><img src="media/left-arrow.svg"></button>
+                    <button class="move-right"><img src="media/right-arrow-7359.svg"></button>
                 </div>                
             </div>
             <div class="add">
@@ -87,8 +87,8 @@
               <span class="title__text">Done</span>
               <span class="counter"></span>
                 <div class="title__actions">
-                    <button class="move-left">←</button>
-                    <button class="move-right">→</button>
+                    <button class="move-left"><img src="media/left-arrow.svg"></button>
+                    <button class="move-right"><img src="media/right-arrow-7359.svg"></button>
                 </div>              
             </div>
             <div class="add">
