develop dark mode

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task management</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dark-mode.css" id="dark-mode-stylesheet" disabled>
     <link rel="icon" type="image/x-icon" href="media/to-do-list-13178.svg">
 </head>
 <body>
     <div class="header">
         Task manager
-        <button class="mode-switch"><img src="media/dark-mode-6682.svg"></button>
-        <!-- <button class="mode-switch"><img src="media/light-on-sun-black-outline-21617.svg"></button> sakrit/aktivirat priko js -->
+        <button class="mode-switch light-mode-btn"><img src="media/dark-mode-6682.svg"></button>
+        <button class="mode-switch dark-mode-btn" style="display: none;"><img src="media/light-on-sun-black-outline-21617.svg"></button> 
     </div>
     <div class="subtitle">
         <button>To do list</button> 
